fixed flexbox problem on firefox, fixes #7

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 .row-wrapper {
     display: flex;
     flex: 1;
+    overflow: hidden;
 }
 
 .row-wrapper > * {
